fix: hide content overlay scrollbar

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,12 @@
 body {
   font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+#content-overlay {
+  overflow: hidden;
+}
+#content-overlay:not([style]) {
+  visibility: hidden;
+}
 #content-overlay.visible ~ #container * {
   transition: none;
 }
@@ -1392,10 +1398,6 @@ body {
 .heading {
   font-size: 1rem;
   font-weight: normal;
-}
-
-#content-overlay:not([style]) {
-  visibility: hidden;
 }
 
 /* Transition Animations */
